Print selections with print media.

PrepareFrameAndViewForPrint::CopySelection() generates HTML + CSS to
support printing only the selection. By making it do the generation in
print mode, the generated output will have print media CSS applied.

BUG=889226

Change-Id: Ia57d4c0429b93d72cb412545eda7579b53570e6c
Reviewed-on: https://chromium-review.googlesource.com/c/1308604
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607118}
Former-commit-id: 59184f71318ad456c2fd7133209c728e0a2264dc